app/javascript/style/components/_user_menu.scss
@use "user_menu/dropdown";
@use "user_menu/mobile_friendly";
@use "../utils/color";
@use '../utils/z_index';

.menu-area {
  // layout
  height: 54px;
  display: flex;
  align-items: center;

  // There is a second chevron in the mobile
  // view, so we have to be extra clear on which
  // one is being addressed
  > .chevron {
    // layout
    margin-left: 10px;

    // looks
    fill: color.$neutral-regular;
    transform: rotate(0);
    transition: all 250ms;
  }
  .profile-image {
    img {
      width: 32px;
    }
  }

  .user-menu {
    transition: opacity 200ms;
    z-index: z_index.$nav-menu;
  }

  &[data-is-open="true"] {
    > .chevron {
      transform: rotate(-180deg);
    }
    .user-menu {
      opacity: 1;
      visibility: visible;
    }
  }

  &[data-is-open="false"] {
    .user-menu {
      // layout
      visibility: collapse;
      opacity: 0;
    }
  }
}

